サンプルをいくつか追加
